--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+* {
+  @apply transition-colors duration-200;
+}
+
 @layer utilities {
   .wrapper {
     @apply w-full flex justify-center;
