--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,8 +16,34 @@
     --max-col: auto-fill;
     --min-item-size: 250px;
   }
+
+  html {
+    overflow-y: scroll;
+    scrollbar-color: var(--primary-color) transparent;
+    scrollbar-width: thin;
+  }
+
+  html::-webkit-scrollbar {
+    width: 8px;
+  }
+  html::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  html::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 2px;
+  }
+  html::-webkit-scrollbar-thumb:hover {
+    background-color: var(--tertiary-color);
+  }
+  html::-webkit-scrollbar-thumb:active {
+    background-color: var(--secondary-color);
+  }
 }
 
+body {
+  @apply transition-colors duration-200;
+}
 #settingsPage * {
   @apply transition-colors duration-200;
 }
@@ -26,9 +54,6 @@
   }
   .contain {
     @apply max-w-[1200px] w-[90%] flex;
-  }
-  .headerIcon {
-    @apply text-primary hover:text-tertiary cursor-pointer transition-colors duration-75;
   }
   .settings-section {
     @apply flex flex-col gap-6 w-full overflow-hidden;
