--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@
 }
 
 body {
-  @apply transition-colors duration-200;
+  @apply transition-colors duration-200 flex flex-col min-h-screen;
 }
 #settingsPage * {
   @apply transition-colors duration-200;
